--- a/schedule_new.Rmd
+++ b/schedule_new.Rmd
@@ -25,7 +25,7 @@ datestring <- paste(month(current_date), day(current_date), year(current_date), 
 ```
 `r datestring`  
 __Lecture:__ [Sampling from your Posterior](./lectures/03_posterior_sampling.html), [Linear Bayesian Models](./lectures/04_linear_models.html),   
-__Reading:__ McElreath Chapter 3-4  
+__Reading:__ McElreath Chapter 3-4, [Bayesian Basics](https://m-clark.github.io/bayesian-basics/)  
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-linreg-2019    
 __Homework:__ [HW1](homework/hw1_sampling_linear.html)
 
@@ -35,7 +35,7 @@ __Homework:__ [HW1](homework/hw1_sampling_linear.html)
 `r datestring`   
 __Lecture:__ [Multiple Predictor Variables (including Categoricals)](./lectures/14_multiple_predictors.html), [Bayesian Multimodel Inference](./lectures/15_mmi.html)   
 __Reading:__ McElreath Chapter 5-6  
-__Additional Reading:__ [Aho et al 2013 Ecology](http://izt.ciens.ucv.ve/ecologia/Archivos/ECO_POB%202014/ECOPO2_2014/Aho%20et%20al%202014.pdf), [Gelman et al. 2013 on WAIC and LOO](http://link.springer.com/article/10.1007/s11222-013-9416-2)  
+__Further Reading:__ [Aho et al 2013 Ecology](http://izt.ciens.ucv.ve/ecologia/Archivos/ECO_POB%202014/ECOPO2_2014/Aho%20et%20al%202014.pdf), [Gelman et al. 2013 on WAIC and LOO](http://link.springer.com/article/10.1007/s11222-013-9416-2)  
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-mmi-2019    
 
 ### Week 4.
@@ -52,7 +52,7 @@ __Etherpad:__ https://etherpad.wikimedia.org/p/609-mcmc_entropy-2019
 `r datestring`   
 __Lecture__: [MaxEnt and GLMs - a review](lectures/09_generalized_linear_models.html), [Bayesian GLMs](./lectures/10_bayesian_glm.html), [GLM lab](lectures/11_bayesian_glm_lab.html)   
 __Reading:__ McElreath Chapter 9-10, [fitting Gamma models multiple ways](http://seananderson.ca/2014/04/08/gamma-glms.html), [Gamma hurdle model](http://seananderson.ca/2014/05/18/gamma-hurdle.html)    
-__Additional Readings:__ [O'Hara 2009](http://byrneslab.net/classes/biol609/O'Hara_2009_glmm.pdf) through section on GLMs, [O'Hara and Kotze 2010](http://byrneslab.net/classes/biol609/o'hara_and_kotze_do_not_log_transform.pdf), [Wharton and Hui 2011](http://byrneslab.net/classes/biol609/Wharton_Hui_2011_Ecology.pdf),  [Hartig DHARMa vignette](https://cran.r-project.org/web/packages/DHARMa/vignettes/DHARMa.html)  
+__Further Readings:__ [O'Hara 2009](http://byrneslab.net/classes/biol609/O'Hara_2009_glmm.pdf) through section on GLMs, [O'Hara and Kotze 2010](http://byrneslab.net/classes/biol609/o'hara_and_kotze_do_not_log_transform.pdf), [Wharton and Hui 2011](http://byrneslab.net/classes/biol609/Wharton_Hui_2011_Ecology.pdf),  [Hartig DHARMa vignette](https://cran.r-project.org/web/packages/DHARMa/vignettes/DHARMa.html)  
 __Files:__  `usethis::use_course("https://biol609.github.io/lectures/glm_data.zip")`  
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-glm-2019    
 
@@ -65,7 +65,7 @@ __Etherpad:__ https://etherpad.wikimedia.org/p/609-glm-2019
 `r datestring`   
 __Lecture:__ [Overdispersed Models](./lectures/12_overdisp.html), [Zero Inflated Models](./lectures/13_zinfl.html)   
 __Reading:__ McElreath Chapter 11, [Introduction to glmmTMB](https://www.biorxiv.org/content/10.1101/132753v1.abstract), [ver Hoef and Boveng 2007 on overdispersion](http://byrneslab.net/classes/biol609/Ver_Hoef_and_Boveng_qp_neg binomial.pdf), [Roset et al 2006 on Overdispersion](http://byrneslab.net/classes/biol609/Rose_et_al_2006_zero_inflation.pdf)  
-__Additional Reading:__ [Zuur chapter on zero inflation](http://byrneslab.net/classes/biol609/zuur_zero_inflation.pdf), [Getting started with glmmTMB](https://cran.r-project.org/web/packages/glmmTMB/vignettes/glmmTMB.pdf), [Troubleshooting with glmmTMB]   
+__Further Reading:__ [Zuur chapter on zero inflation](http://byrneslab.net/classes/biol609/zuur_zero_inflation.pdf), [Getting started with glmmTMB](https://cran.r-project.org/web/packages/glmmTMB/vignettes/glmmTMB.pdf), [Troubleshooting with glmmTMB]   
 __Files:__ [Fishing Duration CSV](./lectures/data/20/fishing_duration.csv)  
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-zig_zag-2019    
 
@@ -92,7 +92,7 @@ __R Packages:__ lme4, lmerTest, [merTools](https://github.com/jknowles/merTools)
 __Lecture:__ [Varying Intercept Mixed Models](./lectures/22_varying_intercept.html) in a Bayesian Context, [Varying Slope Models](./lectures/23a_varslope.html)  
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-mixed_bayesian-2019   
 __Reading:__ McElreath Chapter 12, 13   
-__Additional Reading:__ [Gelman and Hill Ch. 12](http://byrneslab.net/classes/biol609/gelman_hill_ch_12.pdf) (see the bit on one model written 5 ways), [Gelman and Hill Ch. 13](http://byrneslab.net/classes/biol609/gelman_hill_ch_13.pdf), [Gelman on multiple comparisons in mixed models](http://byrneslab.net/classes/biol609/Gelman_multcomp.pdf)  
+__Further Reading:__ [Gelman and Hill Ch. 12](http://byrneslab.net/classes/biol609/gelman_hill_ch_12.pdf) (see the bit on one model written 5 ways), [Gelman and Hill Ch. 13](http://byrneslab.net/classes/biol609/gelman_hill_ch_13.pdf), [Gelman on multiple comparisons in mixed models](http://byrneslab.net/classes/biol609/Gelman_multcomp.pdf)  
 
 ### Week 9.
 ```{r next_date, echo=FALSE}
@@ -107,22 +107,24 @@ __Reading:__ [McNeish and Kelly 2018](./Readings/McNeish_Kelley_PsychMethods_201
 ```{r next_date, echo=FALSE}
 ```
 `r datestring`   
-  __Lecture:__ [Temporal Autocorrelation](lectures/05_timeseries.html), [Spatial Autocorrelation](lectures/20_spatial.html)\
-  __Etherpad:__ https://etherpad.wikimedia.org/p/609-autocorrelation-2019  
-  __Reading:__ [Zuur et al. on temporal autocorrelation](http://byrneslab.net/classes/biol609/Zuur_ch_6_temporal.pdf), [Why OLS is an Unbiased Estimator for GLS](https://dynamicecology.wordpress.com/2012/09/24/why-ols-estimator-is-an-unbiased-estimator-for-gls/), [Zuur et al. on spatial autocorrelation](http://byrneslab.net/classes/biol609/Zuur_ch_7_space.pdf), [Hawkings on the 8 1/2 deadly sins of spatial data analysis](http://byrneslab.net/classes/biol609/hawkins_2011_spatial.pdf)\
-  __Files:__ [Birds](./lectures/data/05/allbirds.csv), [Plankton](./lectures/data/05/planktonMeans.csv), [Boreal Forests](./lectures/data/06/Boreality.txt), [Irish EPA Data](./lectures/data/06/SDI2003.txt)  
-  __R Packages:__ nlme   
+__Lecture:__ [Temporal Autocorrelation](lectures/05_timeseries.html), [Spatial Autocorrelation](lectures/20_spatial.html)\
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-autocorrelation-2019  
+__Reading:__ [Zuur et al. on temporal autocorrelation](http://byrneslab.net/classes/biol609/Zuur_ch_6_temporal.pdf), [Why OLS is an Unbiased Estimator for GLS](https://dynamicecology.wordpress.com/2012/09/24/why-ols-estimator-is-an-unbiased-estimator-for-gls/), [Zuur et al. on spatial autocorrelation](http://byrneslab.net/classes/biol609/Zuur_ch_7_space.pdf), [Hawkings on the 8 1/2 deadly sins of spatial data analysis](http://byrneslab.net/classes/biol609/hawkins_2011_spatial.pdf)\
+__Further Reading:__ [Intro to INLA for spatial and spatiotemporal modeling](https://ourcodingclub.github.io/2018/12/04/inla.html), [Spatial Data Analysis with R-INLA](https://www.jstatsoft.org/article/view/v063i20/v63i20.pdf), [inlabru: a package for Baysianspatial modelling from ecological survey data](https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/2041-210X.13168), [Introduction to INLA](http://www.r-inla.org/events/bayes2013anintroductiontoinlawithacomparisontojagshandson), [more R-INLA examples](http://www.r-inla.org/examples/volume-1), [Hierarchical analysis of spatially autocorrelated ecological data using integrated nested Laplace approximation](https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/j.2041-210X.2012.00211.x) with [code appendix](https://besjournals.onlinelibrary.wiley.com/action/downloadSupplement?doi=10.1111%2Fj.2041-210X.2012.00211.x&file=MEE3_211_sm_Appendices-data-S1-S2.zip) \
+__Files:__ [Birds](./lectures/data/05/allbirds.csv), [Plankton](./lectures/data/05/planktonMeans.csv), [Boreal Forests](./lectures/data/06/Boreality.txt), [Irish EPA Data](./lectures/data/06/SDI2003.txt)\ 
+__R Packages:__ nlme   
 
   
 ### Week 11. 
 ```{r next_date, echo=FALSE}
 ```
 `r datestring`   
-__Lecture:__ [Gaussian Proces Models](./lectures/24_gaussian_process.html) and [Rethinking Alternatives](./lectures/25_beyond_rethinking.html)  
+__Lecture:__ [Gaussian Proces Models](./lectures/24_gaussian_process.html), [Generalized Additive Models (GAMs)](not_here_yet) 
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-beyond-2019   
 __Files:__ [predicted GP script](./lectures/data/gp/predict_gpl2.R)  
-__Reading:__ McElreath Chapter 14, [Roberts et al. 2012](http://byrneslab.net/classes/biol609/Roberts_et_al_2012_gaussian_process.pdf)  
-__Further reading:__ [R users will now inevitably become Bayesians](https://thinkinator.com/2016/01/12/r-users-will-now-inevitably-become-bayesians/), [rstanarm intro](https://cran.r-project.org/web/packages/rstanarm/vignettes/rstanarm.html), [brms overview](https://cran.r-project.org/web/packages/brms/vignettes/brms_overview.pdf), [stan](http://mc-stan.org), [Introduction to INLA](http://www.r-inla.org/events/bayes2013anintroductiontoinlawithacomparisontojagshandson), [more R-INLA examples](http://www.r-inla.org/examples/volume-1)  
+__Reading:__ [Spatial autoregressive models for statistical inference from ecological data](./Readings/verHoef_spatial_autocorrelation.pdf), McElreath Chapter 14, [Roberts et al. 2012](http://byrneslab.net/classes/biol609/Roberts_et_al_2012_gaussian_process.pdf), [GAMs: an Introduction](http://environmentalcomputing.net/intro-to-gams/), [Michael Clark's GAM Introduction](https://m-clark.github.io/generalized-additive-models/), [Hierarchical Generalized Additive Models in ecology: an introduction with mgcv](Pedersen-2019-Hierarchical Generalized Additive Models in ecology.pdf)  
+__Further Readings:__ [Methods to account for spatial autocorrelation in the analysis of species distributional data: a review](./Readings/DormannEcography30_57164.pdf)
+
   
 ### Week 12.  
 ```{r next_date, echo=FALSE}
