--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -4,96 +4,184 @@
   While the topics covered are broad, each week will feature different examples from genetics, ecology, molecular, and evolutionary biology highlighting uses of each individual set of techniques. Each topic will have accompanying readings highlighting a general introduction to a technique (required), and one or more general references or examples. For access to blocked readings, biol609.   
 \
 To see the code of a lecture, load the slides, then change the file extension in your browser bar to .Rmd to get the code. Or go to [this link](https://github.com/biol609/biol609.github.io/tree/master/lectures) for all of the code.
-  
-  
-    
-      
-### Week 1.  
-__Lecture:__ [Why Advanced Data Analysis?](lectures/01_intro.html), [GLM Review](lectures/02_generalized_linear_models.html)\
-__Etherpad:__ https://etherpad.wikimedia.org/p/609-intro  
-__Reading:__ [O'Hara 2009](http://byrneslab.net/classes/biol609/O'Hara_2009_glmm.pdf) through section on GLMs, [O'Hara and Kotze 2010](http://byrneslab.net/classes/biol609/o'hara_and_kotze_do_not_log_transform.pdf), [Wharton and Hui 2011](http://byrneslab.net/classes/biol609/Wharton_Hui_2011_Ecology.pdf), [ver Hoef and Boveng 2007 on overdispersion](http://byrneslab.net/classes/biol609/Ver_Hoef_and_Boveng_qp_neg binomial.pdf), [Hartig DHARMa vignette](https://cran.r-project.org/web/packages/DHARMa/vignettes/DHARMa.html)  
-__Files:__ [Data for GLM Lecture](lectures/02_data.zip)
-  
+
+```{r dates, echo=FALSE, message=FALSE, warning=FALSE}
+library(lubridate)
+current_date = parse_date_time("2022-01-23", orders="ymd")
+datestring <- paste(month(current_date), day(current_date), year(current_date), sep="/")
+```    
+
+### Week 1.
+`r datestring`   
+__Lecture__: [Why Advanced Data Analysis?](lectures/01_intro.html),  [Re-Introduction to Bayes](lectures/02_Bayesian_Intro.html)   
+__Reading:__ McElreath Ch. 1-2  
+__Deeper Reading:__ [Bayes' Rules](https://www.bayesrulesbook.com/chapter-2)  
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-bayes-2024  
+
+
 ### Week 2.
-__Lecture:__ [Model II and Quantile Regression](./lectures/03_rma_quantile.html), [Generalised Least Squares](./lectures/04_gls.html)\
-__Etherpad:__ https://etherpad.wikimedia.org/p/609-alt_regression  
-__Reading:__ [Warton et al. SMATR](http://byrneslab.net/classes/biol609/Warton_et_al_2012_MEE.pdf), [Warton et al. 2006 Model II Review](http://byrneslab.net/classes/biol609/Warton_et_al-2006-Biological_Reviews.pdf), [Cade and Noon 2003 on Quantile Regression](http://byrneslab.net/classes/biol609/Cade_and_Noon_2003_Quantile.pdf), [Brennen et al. 2015 quantile regression example](http://byrneslab.net/classes/biol609/Brennen_et_al_2015_quantile.pdf), [Colonescu Ch. 8 on Heteroskedasticity](https://bookdown.org/ccolonescu/RPoE4/heteroskedasticity.html)\
-__Files:__ [Elk data](./lectures/data/03/ekk_from_dryad.csv), [Clam data](./lectures/data/04/Clams.txt)
-__R Packages:__ Quantreg,   
-  
-### Week 3.
-__Lecture:__ [Temporal Autocorrelation](lectures/05_timeseries.html), [Spatial Autocorrelation](lectures/06_spatial.html)\
-__Etherpad:__ https://etherpad.wikimedia.org/p/609-autocorrelation  
-__Reading:__ [Zuur et al. on temporal autocorrelation](http://byrneslab.net/classes/biol609/Zuur_ch_6_temporal.pdf), [Why OLS is an Unbiased Estimator for GLS](https://dynamicecology.wordpress.com/2012/09/24/why-ols-estimator-is-an-unbiased-estimator-for-gls/), [Zuur et al. on spatial autocorrelation](http://byrneslab.net/classes/biol609/Zuur_ch_7_space.pdf), [Hawkings on the 8 1/2 deadly sins of spatial data analysis](http://byrneslab.net/classes/biol609/hawkins_2011_spatial.pdf)\
-__Files:__ [Birds](./lectures/data/05/allbirds.csv), [Plankton](./lectures/data/05/planktonMeans.csv), [Boreal Forests](./lectures/data/06/Boreality.txt), [Irish EPA Data](./lectures/data/06/SDI2003.txt)  
-__R Packages:__ nlme  
-  
+```{r next_date, echo=FALSE }
+current_date <- current_date+ days(7)
+datestring <- paste(month(current_date), day(current_date), year(current_date), sep="/")
+```
+`r datestring`  
+__Lecture:__ [Sampling from your Posterior](./lectures/03_posterior_sampling.html)     
+__Reading:__ McElreath Chapter 3.  
+__Deeper Reading:__ [Approximating the Posterior](https://www.bayesrulesbook.com/chapter-6), [Bayesian Basics](https://m-clark.github.io/bayesian-basics/), [Posterior Inference and Prediction](https://www.bayesrulesbook.com/chapter-8)    
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-posteriors-2024    
+
+
 ### Week 4.
-__Lecture:__ [Random Effects](./lectures/07_random_effects.html), [Mixed Models](./lectures/08_mixed_effects.html)  
-__Etherpad:__ https://etherpad.wikimedia.org/p/609-ranef  
-__Reading:__ [Gelman and Hill Ch. 12](http://byrneslab.net/classes/biol609/gelman_hill_ch_12.pdf) and/or [Zuur on Random Effects](http://byrneslab.net/classes/biol609/Zuur_ch_5.pdf)  
-__Writings on visualization:__ <a href="http://strengejacke.wordpress.com/2014/10/26/visualizing-generalized-linear-mixed-effects-models-with-ggplot-rstats-lme4/">Visualizing Mixed Models part 1</a>, <a href="http://strengejacke.wordpress.com/2014/11/18/visualizing-generalized-linear-mixed-effects-models-part-2-rstats-lme4/">Visualizing Mixed Models part 2</a>, <a href="http://cran.r-project.org/web/packages/sjPlot/index.html">sjPlot</a>, <a href="http://anythingbutrbitrary.blogspot.com/2012/06/random-regression-coefficients-using.html">Random regression coefficients using lme4</a>, <a href="http://stackoverflow.com/questions/13847936/in-r-plotting-random-effects-from-lmer-lme4-package-using-qqmath-or-dotplot">Making mixed model plots look fancy</a>  
-__A Little More Reading:__ <a href="http://jonlefcheck.net/2013/03/13/r2-for-linear-mixed-effects-models/">R<sup>2</sup> for mixed models (from Jon Lefcheck)</a>  
-__Your One Stop FAQ:__ [Ben Bolker's Mixed Model's FAQ](https://rawgit.com/bbolker/mixedmodels-misc/master/glmmFAQ.html)  
-__Files:__ [Mussels](./lectures/data/07/mussels.csv), [Uneven  Mussels](./lectures/data/07/mussels_ragged.csv), [RIKZ Beach data](./lectures/data/08/rikz.csv), [growth data](./lectures/data/07nestedGrowth.csv)    
-__R Packages:__ lme4, lmerTest, [merTools](https://github.com/jknowles/merTools), sjplot, RLRsim, cAIC4  
+```{r next_date, echo=FALSE }
+```
+`r datestring`  
+__Lecture:__  [Linear Bayesian Models](./lectures/04_linear_models.html),   
+__Reading:__ McElreath Chapter 4  
+__Deeper Reading:__ [Simple Normal Regression](https://www.bayesrulesbook.com/chapter-9), [Posterior Inference and Prediction](https://www.bayesrulesbook.com/chapter-8)   
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-linreg-2024    
 
 ### Week 5.
-__Lecture:__ [Intro to Structural Equation Models](https://1drv.ms/p/s!AvOIsObbweOroNIqHiVxra6SIrp4gw), [Implementing Piecewise SEM](https://1drv.ms/f/s!AvOIsObbweOroNIitg7KpsLhgffJrw)  
-__Etherpad:__ https://etherpad.wikimedia.org/p/609-sem  
-__Reading:__ [Grace et al 2012 Ecosphere](http://byrneslab.net/classes/biol609/Grace_et_al-2012-Ecosphere.pdf)  
-__R packages:__ piecewiseSEM  
+```{r next_date, echo=FALSE}
+```
+`r datestring`   
+__Lecture:__ [Multiple Predictor Variables](./lectures/14_multiple_predictors.html),   
+__Reading:__ McElreath Chapter 5 - 6  
+__Deeper Reading:__ [Extending the Normal Regression Model](https://www.bayesrulesbook.com/chapter-11).   
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-multiple_predictors-2024    
 
-### Week 6. 
-__Lecture__: [Re-Introduction to Bayesian Logic](./lectures/11_bayes_reintro.html) and [Sampling](./lectures/12_posterior_sampling.html)  
-__Reading:__ McElreath Ch. 1-3  
-__Etherpad:__ https://etherpad.wikimedia.org/p/609-bayes  
 
-  
-### Week 7. 
-__Lecture:__ [Linear Bayesian Models](./lectures/13_linear_models.html), [Multiple Predictor Variables (including Categoricals)](./lectures/14_multiple_predictors.html)  
-__Reading:__ McElreath Chapter 4-5  
-__Etherpad:__ https://etherpad.wikimedia.org/p/609-linreg    
+### Week 6.
+```{r next_date, echo=FALSE}
+```
+`r datestring`   
+__Lecture:__ [Bayesian Multimodel Inference](./lectures/15_mmi.html)   
+__Reading:__ McElreath Chapter 7  
+__Deeper Reading:__ [Aho et al 2013 Ecology](http://izt.ciens.ucv.ve/ecologia/Archivos/ECO_POB%202014/ECOPO2_2014/Aho%20et%20al%202014.pdf), [Gelman et al. 2013 on WAIC and LOO](http://link.springer.com/article/10.1007/s11222-013-9416-2)  
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-mmi-2024    
 
-### Week 8. 
-__Lecture:__ [Bayesian Multimodel Inference](./lectures/15_mmi.html), [Interaction Effects](./lectures/16_interactions.html)  
-__Reading:__ McElreath Chapter 6-7  
-__Additional Reading:__ [Aho et al 2013 Ecology](http://izt.ciens.ucv.ve/ecologia/Archivos/ECO_POB%202014/ECOPO2_2014/Aho%20et%20al%202014.pdf), [Gelman et al. 2013 on WAIC and LOO](http://link.springer.com/article/10.1007/s11222-013-9416-2)  
-__Etherpad:__ https://etherpad.wikimedia.org/p/609-mmi    
+
+### Week 7.
+```{r next_date, echo=FALSE}
+```
+`r datestring`   
+__Lecture:__ [Interaction Effects](./lectures/16_interactions.html), [Markov Chain Monte-Carlo Approaches](./lectures/17_mcmc.html)   
+__Reading:__ McElreath Chapter 8-9  
+__Deeper Reading:__ [MCMC Under the Hood](https://www.bayesrulesbook.com/chapter-7). 
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-interactions-2024    
+
+### Week 8.
+```{r next_date, echo=FALSE}
+```
+`r datestring`   
+__Lecture__: [MaxEnt and GLMs - a review](lectures/09_generalized_linear_models.html), [Bayesian GLMs](./lectures/10_bayesian_glm.html), [GLM lab](lectures/11_bayesian_glm_lab.html)   
+__Reading:__ McElreath Chapter 10-11. 
+__Deeper Reading:__ [Poisson and Negative Binomial Regression](https://www.bayesrulesbook.com/chapter-12), [Logistic Regression](https://www.bayesrulesbook.com/chapter-13)  
+__Files:__  `usethis::use_course("https://biol609.github.io/lectures/glm_data.zip")`  
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-glm-2024    
+
+
+### Week 9.
+```{r next_date, echo=FALSE}
+```
+```{r next_date, echo=FALSE}
+```
+`r datestring`   
+__Lecture:__ [Overdispersed Models](./lectures/12_overdisp.html), [Zero Inflated Models](./lectures/13_zinfl.html)   
+__Reading:__ McElreath Chapter 11, [Introduction to glmmTMB](https://www.biorxiv.org/content/10.1101/132753v1.abstract), [ver Hoef and Boveng 2007 on overdispersion](http://byrneslab.net/classes/biol609/Ver_Hoef_and_Boveng_qp_neg binomial.pdf), [Roset et al 2006 on Overdispersion](http://byrneslab.net/classes/biol609/Rose_et_al_2006_zero_inflation.pdf)  
+__Further Reading:__ [Zuur chapter on zero inflation](http://byrneslab.net/classes/biol609/zuur_zero_inflation.pdf), [Getting started with glmmTMB](https://cran.r-project.org/web/packages/glmmTMB/vignettes/glmmTMB.pdf), [Troubleshooting with glmmTMB]   
+__Files:__ [Fishing Duration CSV](./lectures/data/20/fishing_duration.csv)  
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-zig_zag-2024    
+
+
+### Week 10.
+
+
+```{r next_date, echo=FALSE}
+```
+`r datestring`   
+__Lecture:__ [Random Effects](./lectures/07_random_effects.html), [Mixed Models](./lectures/08_mixed_effects.html)  
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-ranef-2024  
+__Reading:__ [Gelman and Hill Ch. 12](http://byrneslab.net/classes/biol609/gelman_hill_ch_12.pdf) and/or [Zuur on Random Effects](http://byrneslab.net/classes/biol609/Zuur_ch_5.pdf), [A Practical Guide to Generalized Linear Mixed Models](https://www.cell.com/trends/ecology-evolution/fulltext/S0169-5347(09)00019-6)    
+__Writings on visualization:__ <a href="http://anythingbutrbitrary.blogspot.com/2012/06/random-regression-coefficients-using.html">Random regression coefficients using lme4</a>, <a href="http://stackoverflow.com/questions/13847936/in-r-plotting-random-effects-from-lmer-lme4-package-using-qqmath-or-dotplot">Making mixed model plots look fancy</a>  
+__A Little More Reading:__ <a href="http://jonlefcheck.net/2013/03/13/r2-for-linear-mixed-effects-models/">R<sup>2</sup> for mixed models (from Jon Lefcheck)</a>, [lme4 converge warnings and solutions](https://rstudio-pubs-static.s3.amazonaws.com/33653_57fc7b8e5d484c909b615d8633c01d51.html)  
+  __Your One Stop FAQ:__ [Ben Bolker's Mixed Model's FAQ](https://bbolker.github.io/mixedmodels-misc/)  
+__Files:__ [Mussels](./lectures/data/07/mussels.csv), [Uneven  Mussels](./lectures/data/07/mussels_ragged.csv), [RIKZ Beach data](./lectures/data/08/rikz.csv), [growth data](./lectures/data/08/nestedGrowth.csv)    
+__R Packages:__ lme4, lmerTest, [merTools](https://github.com/jknowles/merTools), RLRsim, cAIC4  
   
-### Week 9. 
-__Lecture:__ [Markov Chain Monte-Carlo Approaches](./lectures/17_mcmc.html)   
-__Reading:__ McElreath Chapter 8,9  
-__Etherpad:__ https://etherpad.wikimedia.org/p/609-mcmc_entropy    
-  
-### Week 10. 
-__Lecture__: [MaxEnt and GLMs](./lectures/18_maxent_glm.html), Generalized Linear Models in a Bayesian Framework  
-__Reading:__ McElreath Chapter 9-10
+### Week 8.
+```{r next_date, echo=FALSE}
+```
+`r datestring`   
+__Lecture:__ [Varying Intercept Mixed Models](./lectures/22_varying_intercept.html) in a Bayesian Context, [Varying Slope Models](./lectures/23a_varslope.html)  
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-mixed_bayesian-2024   
+__Reading:__ McElreath Chapter 12, 13   
+__Further Reading:__ [Gelman and Hill Ch. 12](http://byrneslab.net/classes/biol609/gelman_hill_ch_12.pdf) (see the bit on one model written 5 ways), [Gelman and Hill Ch. 13](http://byrneslab.net/classes/biol609/gelman_hill_ch_13.pdf), [Gelman on multiple comparisons in mixed models](http://byrneslab.net/classes/biol609/Gelman_multcomp.pdf)  
+
+### Week 9.
+```{r next_date, echo=FALSE}
+```
+`r datestring`   
+__Lecture:__  [brms and Prediction with Mixed Models](./lectures/23c_brms_prediction.html), Group-Mean Centering and Other Model Structures    
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-mixed_bayesian-2024   
+__Reading:__ [McNeish and Kelly 2018](./Readings/McNeish_Kelley_PsychMethods_2024.pdf), [Causal Model Structures and Random Effects](http://rpubs.com/jebyrnes/causal_mods), [Poe Lecture Slides](./Readings/2018-11-02_wim_poe_clustered_slides.pdf), [Bell et al. 2018a](./Readings/Bell2018_Article_UnderstandingAndMisunderstandi.pdf), [Bell et al 2018b](./Bell_2018_Qual_Quant.pdf)  
+
+
+### Week 10.
+```{r next_date, echo=FALSE}
+```
+`r datestring`   
+__Lecture:__ [Temporal Autocorrelation](lectures/05_timeseries.html), [Spatial Autocorrelation](lectures/20_spatial.html)\
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-autocorrelation-2024  
+__Reading:__ [Zuur et al. on temporal autocorrelation](http://byrneslab.net/classes/biol609/Zuur_ch_6_temporal.pdf), [Why OLS is an Unbiased Estimator for GLS](https://dynamicecology.wordpress.com/2012/09/24/why-ols-estimator-is-an-unbiased-estimator-for-gls/), [Zuur et al. on spatial autocorrelation](http://byrneslab.net/classes/biol609/Zuur_ch_7_space.pdf), [Hawkings on the 8 1/2 deadly sins of spatial data analysis](http://byrneslab.net/classes/biol609/hawkins_2011_spatial.pdf)\
+__Further Reading:__ [Intro to INLA for spatial and spatiotemporal modeling](https://ourcodingclub.github.io/2018/12/04/inla.html), [Spatial Data Analysis with R-INLA](https://www.jstatsoft.org/article/view/v063i20/v63i20.pdf), [inlabru: a package for Baysianspatial modelling from ecological survey data](https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/2041-210X.13168), [Introduction to INLA](http://www.r-inla.org/events/bayes2013anintroductiontoinlawithacomparisontojagshandson), [more R-INLA examples](http://www.r-inla.org/examples/volume-1), [Hierarchical analysis of spatially autocorrelated ecological data using integrated nested Laplace approximation](https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/j.2041-210X.2012.00211.x) with [code appendix](https://besjournals.onlinelibrary.wiley.com/action/downloadSupplement?doi=10.1111%2Fj.2041-210X.2012.00211.x&file=MEE3_211_sm_Appendices-data-S1-S2.zip) \
+__Files:__ [Birds](./lectures/data/05/allbirds.csv), [Plankton](./lectures/data/05/planktonMeans.csv), [Boreal Forests](./lectures/data/06/Boreality.txt), [Irish EPA Data](./lectures/data/06/SDI2003.txt)\ 
+__R Packages:__ nlme   
+
   
 ### Week 11. 
-__Lecture:__ [Gamma and Zero Inflated Models](./lectures/20_zinfl.html), [Overdispersed Models](./lectures/21_overdisp.html)  
-__Reading:__ McElreath Chapter 11, [fitting Gamma models multiple ways](http://seananderson.ca/2014/04/08/gamma-glms.html), [Gamma hurdle model](http://seananderson.ca/2014/05/18/gamma-hurdle.html)  
-__Files:__ [Fishing Duration CSV](./lectures/data/20/fishing_duration.csv)  
-__Etherpad:__ https://etherpad.wikimedia.org/p/609-zig_zag    
+```{r next_date, echo=FALSE}
+```
+`r datestring`   
+__Lecture:__ [Gaussian Proces Models](./lectures/24_gaussian_process.html), [Generalized Additive Models (GAMs)](./lectures/22_gams.html)   
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-beyond-2024   
+__Files:__ [predicted GP script](./lectures/data/gp/predict_gpl2.R)  
+__Reading:__ [Spatial autoregressive models for statistical inference from ecological data](./Readings/verHoef_spatial_autocorrelation.pdf), McElreath Chapter 14, [Roberts et al. 2012](http://byrneslab.net/classes/biol609/Roberts_et_al_2012_gaussian_process.pdf), [GAMs: an Introduction](http://environmentalcomputing.net/intro-to-gams/), [Michael Clark's GAM Introduction](https://m-clark.github.io/generalized-additive-models/), [Hierarchical Generalized Additive Models in ecology: an introduction with mgcv](./Readings/Pedersen-2024-Hierarchical Generalized Additive Models in ecology.pdf)  
+__Further Readings:__ [Methods to account for spatial autocorrelation in the analysis of species distributional data: a review](./Readings/DormannEcography30_57164.pdf)
 
   
-### Week 12. 
-__Lecture:__ [Varying Intercept Mixed Models](./lectures/22_varying_intercept.html) in a Bayesian Context, [Varying Slope Models](./lectures/23a_varslope.html), [Prediction with Mixed Models](./lectures/23b_prediction.html)  
-__Etherpad:__ https://etherpad.wikimedia.org/p/609-mixed_bayesian   
-__Reading:__ McElreath Chapter 12, 13   
-__Additional Reading:__ [Gelman and Hill Ch. 12](http://byrneslab.net/classes/biol609/gelman_hill_ch_12.pdf) (see the bit on one model written 5 ways), [Gelman and Hill Ch. 13](http://byrneslab.net/classes/biol609/gelman_hill_ch_13.pdf), [Gelman on multiple comparisons in mixed models](http://byrneslab.net/classes/biol609/Gelman_multcomp.pdf)
+### Week 12.  
+```{r next_date, echo=FALSE}
+```
+`r datestring`   
+__Lecture:__ Measurement Error and Missing Data, [Model II and Quantile Regression](./lectures/03_rma_quantile.html)  
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-alt_regression-2024  
+__Reading:__ [Warton et al. SMATR](http://byrneslab.net/classes/biol609/Warton_et_al_2012_MEE.pdf), [Warton et al. 2006 Model II Review](http://byrneslab.net/classes/biol609/Warton_et_al-2006-Biological_Reviews.pdf), [Cade and Noon 2003 on Quantile Regression](http://byrneslab.net/classes/biol609/Cade_and_Noon_2003_Quantile.pdf), [Brennen et al. 2015 quantile regression example](http://byrneslab.net/classes/biol609/Brennen_et_al_2015_quantile.pdf), [Colonescu Ch. 8 on Heteroskedasticity](https://bookdown.org/ccolonescu/RPoE4/heteroskedasticity.html)\
+__Files:__ [Elk data](./lectures/data/03/ekk_from_dryad.csv), [Clam data](./lectures/data/04/Clams.txt)  
+__R Packages:__ Quantreg  
   
-### Week 13. 
-__Lecture:__ [Gaussian Proces Models](./lectures/24_gaussian_process.html) and [Rethinking Alternatives](./lectures/25_beyond_rethinking.html)  
-__Etherpad:__ https://etherpad.wikimedia.org/p/609-beyond   
-__Files:__ [predicted GP script](./lectures/data/gp/predict_gpl2.R)  
-__Reading:__ McElreath Chapter 14, [Roberts et al. 2012](http://byrneslab.net/classes/biol609/Roberts_et_al_2012_gaussian_process.pdf)  
-__Further reading:__ [R users will now inevitably become Bayesians](https://thinkinator.com/2016/01/12/r-users-will-now-inevitably-become-bayesians/), [rstanarm intro](https://cran.r-project.org/web/packages/rstanarm/vignettes/rstanarm.html), [brms overview](https://cran.r-project.org/web/packages/brms/vignettes/brms_overview.pdf), [stan](http://mc-stan.org), [Introduction to INLA](http://www.r-inla.org/events/bayes2013anintroductiontoinlawithacomparisontojagshandson), [more R-INLA examples](http://www.r-inla.org/examples/volume-1),   
+### Week 13.
+```{r next_date, echo=FALSE}
+```
+`r datestring`   
+__Lecture:__ Causal Modeling  
+__Readings:__ [A Second Change to Get Causal Inference Right](./Readings/Hernán_and_Healey_2024.pdf), [Causal analysis in control impact studies](./Readings/Larsen_et_al_2024.pdf), [Pearl 2010](Pearl_2010_causal_inference.pdf)    
+__Further Reading:__ [Causal Inference](https://www.hsph.harvard.edu/miguel-hernan/causal-inference-book/)
   
-### Week 14. 
-__Lecture:__ Open Lab  
-__Reading:__ [Prior Choice Wiki](https://github.com/stan-dev/stan/wiki/Prior-Choice-Recommendations)  
-  
+### Week 14.
+```{r next_date, echo=FALSE}
+```
+`r datestring`   
+<!-- __Lecture:__ [Intro to Structural Equation Models](https://1drv.ms/p/s!AvOIsObbweOroNIqHiVxra6SIrp4gw), [Implementing Piecewise SEM](https://1drv.ms/f/s!AvOIsObbweOroNIitg7KpsLhgffJrw)  -->
+__Lecture:__ [Intro to Structural Equation Models](https://www.dropbox.com/s/l7z6sbs16jk2y0s/23_SEM_Intro.pptx?dl=0), [SEM Implementation](https://www.dropbox.com/s/j59oodlmcx53tiw/24_Estimation_in_SEM.pptx?dl=0)  
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-sem-2024  
+__Reading:__ [Grace et al 2012 Ecosphere](http://byrneslab.net/classes/biol609/Grace_et_al-2012-Ecosphere.pdf), [Lefcheck 2016](./Readings/Lefcheck_2016_SEM.pdf)   
+___Further Reading:__ [Notes from Jon Lefcheck](https://jslefche.github.io/sem_book/)  
+__Helpful Websites:__ [piecewiseSEM](http://jslefche.github.io/piecewiseSEM/), [lavaan](http://lavaan.ugent.be/), [Jim Grace's Tutorials](https://www.usgs.gov/centers/wetland-and-aquatic-research-center/science/quantitative-analysis-using-structural-equation)    
+
 ### Week 15.
-__Lecture:__ Final Presentations, May 11  
-__Assignments:__ Final Paper due, May 18  
+```{r next_date, echo=FALSE}
+```
+`r datestring`   
+__**Final Work Party Week!**__  
+__Final Presentations:__  Friday May 17th  
+__Final Papers Due:__ May 21st  
